k8s/yas/03-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: yas
  labels:
    app: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: yas
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      enableServiceLinks: false

      nodeSelector:
        kubernetes.io/hostname: yas-worker-32gb

      containers:
        - name: keycloak
          image: anhhnus/yas-keycloak:main
          imagePullPolicy: Always

          args:
            - start-dev
            - --import-realm

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 60

          readinessProbe:
            httpGet:
              path: /realms/master
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 12

          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: 250m
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 1536Mi
